# OmniRT-main

./: .clangd  .gitignore  CMakeLists copy.txt  CMakeLists.txt  CMakeLists.txt-pb-test  CMakeLists.txt.test  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  VERSION  aimrt_core_arch.md  architecture.md  build.sh  clean_cmake.sh  configure_cmake.bat  disclean.sh  githubtest.md  mod-load.md  record.md
cmake/: CheckLocalSource.cmake  GetAsio.cmake  GetFmt.cmake  GetGFlags.cmake  GetGTest.cmake  GetLibUnifex.cmake  GetNlohmannJson.cmake  GetProtobuf.cmake  GetStdexec.cmake  GetTBB.cmake  GetYamlCpp.cmake  ProtobufGenCode.cmake  findtyni.cmake  toolchain-arm-linux-gnueabihf.cmake  toolchain-x86-linux-gnueabihf.cmake  toolchain-x86-linux-gnueabihf.cmake.bak
cmake_config_tool/: README.md  app.py  cmake_config.yaml
cmake_config_tool/templates/: index.html
document/sphinx-cn/designwithAI/: .$flow.drawio.bkp  API_LUA_.md  DI vs RPC-PUBSUB  flow copy.mmd  flow.drawio  flow.md  flow1.md
document/sphinx-cn/pr/: _47N1A~C.MD  pr.windsurfrules
document/sphinx-cn/studyWithAIGen/: 20250130-asio_executor.md  20250130-std_queue.md  20250130-yaml_configurator.md  20250131-C++类&指针.md  20250131-findif.md  20250131-module_init.md  20250131-terminal_ops.md  20250201-channel.md  20250201-claude_gen.md  20250201-ds & claund.md  20250201-ds_gen.md  20250203-动态库引发的stdcout段错误.md  20250204-channel_dir_desc.md  rpc_format.md
examples/: CMakeLists.txt
examples/hello/: CMakeLists.txt  hello.cpp
examples/rpc/: CMakeLists.txt  README.md
examples/rpc/example/: rpc_client_demo.cpp  rpc_server_demo.cpp
examples/rpc/src/: binary_serializer.h  client.cpp  client.h  common.h  server.cpp  server.h
examples/shm_spsc_queue_demo/: CMakeLists.txt  README.md  bidirectional_demo.cpp  consumer.cpp  perf_test.cpp  producer.cpp
examples/spsc_queue_example/: CMakeLists.txt  README.md  basic_example.cpp  data_processing_example.cpp  latency_benchmark.cpp
prompts-rules/: comments.windsurfrules  rec.windsurfrules
scripts/: 3rdparty_install.sh  build_platforms.sh  disclean-deps.sh
src/: CMakeLists.txt
src/common/net/: asio_http_cli.h  asio_http_svr.h  asio_tcp_cli.h  asio_tcp_svr.h  asio_tools.h  asio_udp_cli.h  asio_ws_cli.h  asio_ws_svr.h
src/common/ros2_util/: json_convert.h  yaml_convert.h
src/common/util/: CMakeLists.txt  SHM_QUEUE_README.md  atomic_hash_map.h  block_queue.h  block_queue_test.cc  bounded_spsc_lockfree_queue.h  bounded_spsc_lockfree_queue_test.cc  buffer_util.h  buffer_util_test.cc  compiler_hints.h  deferred.h  deferred_test.cc  exception.h  format.h  futex_atomic.h  light_signal.h  light_signal_test.cc  log_util.h  log_util.h.CPP20  log_util_test copy.cc  log_util_test.cc  log_util_test_copy.cc  macros.h  macros_test.cc  nlohmann_json_util.h  shm_bounded_spsc_lockfree_queue.h  shm_bounded_spsc_lockfree_queue_test.cc  stl_tool.h  string_util.h  string_util_test.cc  time_util_test.cc  url_encode.h  url_parser.h
src/examples/: CMakeLists.txt
src/examples/cpp/: CMakeLists.txt
src/examples/cpp/rt_core/core_main/: CMakeLists-with-core-main.txt  CMakeLists.txt  app  main-with-core-main.cc  main.cc
src/interface/: CMakeLists.txt
src/interface/aimrt_module_c_interface/: CMakeLists.txt  config.h  core_base.h  module_manager_base.h
src/interface/aimrt_module_cpp_interface/: CMakeLists.txt  core.h
src/plugins/echo_plugin/: echo_plugin.cc
src/plugins/grpc_plugin/: grpc_rpc_backend.cc
src/plugins/iceoryx_plugin/: iceoryx_buffer_array_allocator.h  iceoryx_channel_backend.cc  util.cc
src/plugins/mqtt_plugin/: mqtt_rpc_backend.cc  msg_handle_registry.h
src/plugins/net_plugin/: msg_handle_registry.h
src/plugins/opentelemetry_plugin/: opentelemetry_plugin.cc
src/plugins/parameter_plugin/: service.cc
src/plugins/record_playback_plugin/: playback_action.cc  record_action.cc  record_playback_plugin.cc
src/plugins/ros2_plugin/: ros2_adapter_rpc_client.cc  ros2_adapter_rpc_server.cc  ros2_rpc_backend.cc
src/plugins/time_manipulator_plugin/: service.cc  time_manipulator_executor.h
src/protocols/: CMakeLists.txt
src/protocols/common/: error.proto  (+2 more)
src/runtime/: CMakeLists.txt
src/runtime/core/: CMakeLists copy.txt.bk  CMakeLists-test.txt  CMakeLists.txt  CMakeLists.txt112  aimrt_core copy 2.cc.bk  aimrt_core copy 2.h.bk  aimrt_core.cc  aimrt_core.h  aimrt_core_test.cc
src/runtime/core/allocator/: CMakeLists.txt  allocator_manager.cc  allocator_proxy.h
src/runtime/core/channel/: channel_backend_manager.cc  channel_backend_tools.h  channel_framework_async_filter.h  channel_handle_proxy.h  channel_manager.cc  channel_registry.cc  channel_registry.h  local_channel_backend.cc
src/runtime/core/configurator/: configurator_manager.cc  configurator_yaml.h
src/runtime/core/executor/: asio_strand_executor.cc  asio_strand_executor.h  asio_thread_executor.cc  asio_thread_executor.h  executor_manager.cc  executor_manager.h  executor_manager_test.cc  executor_proxy.h  guard_thread_executor.cc  guard_thread_executor.h  main_thread_executor.cc  native_thread_executor.cc  native_thread_executor.h  simple_thread_executor.cc  tbb_thread_executor.cc  time_wheel_executor.h
src/runtime/core/llm/: llm_base.h  llm_error.h  llm_manager.cc  llm_manager.h  llm_proxy.h  llm_types.h  openai_llm.h
src/runtime/core/llm/providers/: gemini_llm.h  openai_llm.cc  openai_llm.h
src/runtime/core/logger/: console_logger_backend.cc  formatter_test.cc  logger_proxy.h  rotate_file_logger_backend.cc
src/runtime/core/manager/: manager_base.h  manager_container.h  manager_factory.h
src/runtime/core/module/: core_proxy.h  module_loader.cc  module_manager.cc  module_manager.h  module_proxy.h
src/runtime/core/parameter/: parameter_handle.cc  parameter_handle_proxy.h
src/runtime/core/rpc/: local_rpc_backend.cc  rpc_backend_manager.cc  rpc_backend_tools.h  rpc_framework_async_filter.h  rpc_handle_proxy.h  rpc_manager.h
src/runtime/core/util/: CMakeLists.txt1  dynamic_lib.h  rpc_client_tool.h  type_support_pkg_loader.cc  type_support_pkg_loader.h  version.h
src/tools/: CMakeLists.txt
(+113 files in other folders)
